[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/RoundChanger.gd" type="Script" id=1]

[node name="RoundChanger" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="TimerCountDown" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RemoveTextTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimeCountdown" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 473.0
margin_top = 247.0
margin_right = 513.0
margin_bottom = 261.0

[connection signal="timeout" from="TimerCountDown" to="." method="change_time_text"]
[connection signal="timeout" from="Timer" to="." method="initialize_round"]
[connection signal="timeout" from="RemoveTextTimer" to="." method="remove_text"]
